--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A react flavor to your drink",
   "main": "public/index.html",
   "scripts": {
-    "build": "webpack --mode production",
+    "build": "webpack --config webpack.prod.js",
     "start": "webpack-dev-server --config webpack.dev.js"
   },
   "author": "Mifta Sintaha",
