--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "A react flavor to your drink",
   "main": "public/index.html",
   "scripts": {
+    "production": "webpack-dev-server --config webpack.prod.js --host 0.0.0.0 --port 8080",
     "build": "webpack --config webpack.prod.js",
-    "start": "webpack-dev-server --config webpack.dev.js"
+    "start": "webpack-dev-server --config webpack.dev.js --host 0.0.0.0 --port 8080"
   },
   "author": "Mifta Sintaha",
   "license": "MIT",
