Add mocha and enzyme test framework

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "production": "webpack-dev-server --config webpack.prod.js --host 0.0.0.0 --port 8080",
     "build": "webpack --config webpack.prod.js",
-    "start": "webpack-dev-server --config webpack.dev.js --host 0.0.0.0 --port 8080"
+    "start": "webpack-dev-server --config webpack.dev.js --host 0.0.0.0 --port 8080",
+    "test": "mocha --require @babel/register --require src/test/helper.js --require src/test/dom.js --require ignore-styles 'src/**/**/*.spec.js'",
+    "test-watch": "npm run test -- --watch"
   },
   "author": "Mifta Sintaha",
   "license": "MIT",
@@ -17,6 +19,13 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "glob": "^7.1.3",
     "lodash": "^4.17.11",
+    "mocha": "^7.1.0",
+    "jsdom": "^16.2.0",
+    "ignore-styles": "^5.0.1",
+    "chai": "^4.2.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "react-addons-test-utils": "^15.6.2",
     "mini-css-extract-plugin": "^0.6.0",
     "node-sass": "^4.11.0",
     "node-sass-glob-importer": "^5.3.1",
@@ -28,10 +37,12 @@
     "webpack-merge": "^4.2.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.7.4",
     "@babel/core": "^7.0.0",
     "@babel/plugin-proposal-class-properties": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.8.6",
     "babel-eslint": "^10.0.0",
     "babel-loader": "^8.0.0",
     "clean-webpack-plugin": "^1.0.0",
