Add sinon assertion example

--- a/package.json
+++ b/package.json
@@ -16,24 +16,26 @@
     "axios": "^0.19.0",
     "babel-polyfill": "^6.26.0",
     "bcrypt": "^3.0.6",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "glob": "^7.1.3",
-    "lodash": "^4.17.11",
-    "mocha": "^7.1.0",
-    "jsdom": "^16.2.0",
-    "ignore-styles": "^5.0.1",
     "chai": "^4.2.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
-    "react-addons-test-utils": "^15.6.2",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "glob": "^7.1.3",
+    "ignore-styles": "^5.0.1",
+    "jsdom": "^16.2.0",
+    "lodash": "^4.17.11",
     "mini-css-extract-plugin": "^0.6.0",
+    "mocha": "^7.1.0",
     "node-sass": "^4.11.0",
     "node-sass-glob-importer": "^5.3.1",
     "prop-types": "^15.7.2",
     "react": "^16.5.2",
+    "react-addons-test-utils": "^15.6.2",
     "react-dom": "^16.5.2",
     "react-router-dom": "^5.0.0",
     "sass-loader": "^7.1.0",
+    "should": "^13.2.3",
+    "sinon": "^9.0.0",
     "webpack-merge": "^4.2.1"
   },
   "devDependencies": {
