--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "sass-loader": "^7.1.0",
     "should": "^13.2.3",
     "sinon": "^9.0.0",
+    "sinon-chai": "^3.5.0",
     "webpack-merge": "^4.2.1"
   },
   "devDependencies": {
